# First-idle-game-with-py

./: README.md  main.py  pyproject.toml
