[tool.poetry]
name = "first-idle-game-with-py"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "first_idle_game_with_py"}]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "2.5.2"
replit = "3.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
